# propagator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CHANGELOG.md  MANIFEST.in  PERFORMANCE_PLAN_EXPERIMENTAL_FINDINGS.md  README.md  TODO.md  clean_cache.sh  mkdocs.yml  pyproject.toml
.github/workflows/: build_wheel_on_main.yaml  docs.yaml  mirror-to-pcm-dpc.yaml  pylint._yaml  release-on-tag.yaml  test.yaml
benchmarks/: __init__.py  baseline.txt  benchmark.py  benchmark_core.py  benchmark_large_domain.py  benchmark_quick.py  compare_benchmarks.py  profile_detailed.py  results_baseline.txt  results_final.txt
docs/: bibliography.md  cli.md  getting-started.md  index.md  outputs.md  programmatic.md  propagation_scheduler_refactor.md  spotting.md
docs/javascripts/: cima-brand.js
docs/reference/: index.md  io.md  numba.md  propagator.md
docs/stylesheets/: cima-theme.css
docs_hooks/: spotting.py
example/: config.json  config_actions.json  config_tiles.json  dem.tif  dem.tif.aux.xml  example.py  example_spotting_dynamics.py  example_stochastic_ignitions.py  fuel.tif  fuel.tif.aux.xml  fuel_config.yaml  fuels.yaml  line.geojson  p_vegetation.txt  params.json  params_actions.json  params_ign_polygon.json  params_tiles.json  point.geojson  polygon.geojson
src/propagator/: __init__.py
src/propagator/cli/: console.py  main.py
src/propagator/core/: __init__.py  constants.py  models.py  propagator.py  scheduler.py  utils.py
src/propagator/core/numba/: __init__.py  front_tracking.py  functions.py  models.py  propagation.py
src/propagator/io/: __init__.py  actions.py  boundary_conditions.py  configuration.py  geo.py  geometry.py
src/propagator/io/loader/: geotiff.py  tiles.py
src/propagator/io/writer/: isochrones_geojson.py  metadata_json.py  protocol.py  raster_geotiff.py
tests/: test_core.py
tests/core/: test_models.py  test_propagator.py  test_scheduler.py
