[project]
name = "propagator"
dynamic = ["version"]
description = "PROPAGATOR: An Operational Cellular-Automata Based Wildfire Simulator"
authors = [
    { name = "Mirko D'Andrea", email = "mirko.dandrea@cimafoundation.org" },
    { name = "Nicolò Perello", email = "nicolo.perello@cimafoundation.org" },
    { name = "Andrea Trucchia", email = "andrea.trucchia@cimafoundation.org" },
]
license = "EUPL-1.2"
license-files = ["LICENSE.md"]
readme = "README.md"


requires-python = ">=3.11"
dependencies = [
    "numba==0.61.2",
    "scipy>=1.16.1",
]

[project.optional-dependencies]
cli = [
    "angles>=2.0",
    "fiona>=1.10.1",
    "pyproj>=3.7.2",
    "rasterio>=1.4.3",
    "shapely>=2.1.1",
    "utm>=0.8.1",
    "affine>=2.4.0",
    "geopandas>=1.1.1",
    # cli specific
    "rich>=14.1.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
]

io = [
    "angles>=2.0",
    "fiona>=1.10.1",
    "pyproj>=3.7.2",
    "rasterio>=1.4.3",
    "shapely>=2.1.1",
    "utm>=0.8.1",
    "affine>=2.4.0",
    "geopandas>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "ruff>=0.13.0",
    "pytest>=8.4.2",
    # Docs
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.19",
    "mkdocstrings[python]>=0.30.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mike>=2.1.3",
    "pyinstrument>=5.1.1",
    "ipython>=9.5.0",
    "notebook>=7.4.5",
    "pylint>=3.3.8",
    "pre-commit>=4.3.0",
    "types-shapely>=2.1.0.20250917",
    "scipy-stubs[scipy]>=1.16.1.1",
    "types-pyyaml>=6.0.12.20250915",
    "types-geopandas>=1.1.1.20250829",
]

[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/propagator/version.py"


[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203", "E501"]

[project.scripts]
propagator = "propagator.cli.main:main"

[project.urls]
Homepage = "https://github.com/CIMAFoundation/propagator_sim"
Issues = "https://github.com/CIMAFoundation/propagator_sim/issues"
